# dc_helper

./: pyproject.toml
src/mypackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mypackage/dc/: __init__.py  _internal.py  base.py  serial.py
src/mypackage/definitions/: __init__.py  data.py  interface.py  location.py  operation.py
tests/: misc_tests.ipynb
