[build-system]
requires = ["setuptools >= 75.8"]
build-backend = "setuptools.build_meta"


[project]
name = "mypackage"
version = "0.0.1"
authors = [
    {name = "Michael Bencsik", email = "michaeldbencsik@gmail.com"}
]
description = "Dataclass Testing"
requires-python = "==3.13.*"
dependencies = [
    "dacite==1.9.2"
]
